--- a/css/styles.css
+++ b/css/styles.css
@@ -225,47 +225,49 @@ body {
   background-color: var(--color-ocean);
 }
 
-/*============Modal Window===============*/
-
 /*============ Modal Window ==========*/
-/* Overlay */
+
 .bacdrop {
-  position: absolute;
-  left: 0;
+ position: fixed;
   top: 0;
+  left: 0;
   right: 0;
-  bottom: 30%;
-  background: rgba(46, 47, 66, 0.4);
+  bottom: 0;
+  background-color:  rgba(46, 47, 66, 0.4);
+ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 .modal {
   position: absolute;
   width: 408px;
   height: 584px;
   top: 80px;
   left: 39%;
-  background: var(--color-dairy);
+  background-color: var(--color-dairy);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding: 72px 24px 24px 24px;
 }
 .modal-button {
   display: flex;
   align-items: center;
   justify-content: center;
-
   position: absolute;
   top: 24px;
   right: 24px;
-
   width: 24px;
   height: 24px;
-
   background: var(--color-cornflower);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
-
   /*  Set transition values  */
   transition-property: background-color, fill;
   transition-duration: 250ms;
@@ -283,6 +285,70 @@ body {
   visibility: hidden;
   pointer-events: none;
 }
+.md-top-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-grey);
+   text-align: center;
+    margin-bottom: 16px;
+   
+}
+
+.md-entry-field-name {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.04em;
+  color: var(--color-light-slate);
+}
+.md-entry-field {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  /*  Set transition values  */
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--color-navy-blue);
+}
+.md-entry-field-icons {
+  margin-top: calc(50%-6px);
+  margin-bottom: calc(50%-6px);
+  margin-right: 0;
+  margin-left: 19px;
+  fill: var(--color-navy-blue);
+  /*  Set transition values  */
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-form {
+}
+.md-entry {
+  border: none;
+}
+
+.md-entry-field:placeholder-shown {
+  border: 1px solid var(--color-iris);
+  fill: var(--color-iris);
+}
+.md-textarea {
+  width: 100%;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+.md-agreemant-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  color: color(--color-navy-blue);
+}
+/*============Modal Window end===============*/
 
 /*===============section 2 studio=================*/
 .feautures {
@@ -422,7 +488,7 @@ body {
   fill: var(--color-cloud);
   /*--transformation--*/
   transition-property: background-color;
-  transition-duration: 250ms;
+  transition-duration: 250msflex-wrap: nowrap;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-container .social-link:hover,
@@ -630,7 +696,7 @@ body {
   color: var(--color-cloud);
   max-width: 264px;
 }
-.soc-media-titel {
+.footer-subtitels {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -649,4 +715,77 @@ body {
 }
 .footer-container .social {
   gap: 16px;
+}
+
+
+
+
+.subscribe{
+   margin-left: 80px;
+}
+
+.subscribe-form{
+  display: flex;
+  width:453px;
+  height: 40px;
+
+  justify-content:space-between;
+}
+
+.subscribe-form-input {
+  width:264px ;
+  height: 100%;
+  padding-left: 16px;
+  margin-bottom: 16px;
+
+  border: 1px solid var(--color-white);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: var(--color-navy-blue-modal);
+  color: var(--color-white);
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-form-input:focus {
+  outline: none;
+  border-color: var(--color-iris);
+}
+
+.subscribe-form-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: var(--color-white);
+}
+
+.subscribe-btn {
+  display: flex;
+ gap:16px;
+  align-items: center;
+
+  width: 165px;
+  height: 100%;
+  padding: 8px 24px;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--color-iris);
+  cursor: pointer;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--color-white);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: var(--color-ocean);
+}
+
+.subscribe-form-icon {
+  fill: currentColor;
+ 
 }
