--- a/css/styles.css
+++ b/css/styles.css
@@ -337,8 +337,8 @@ transition-duration: 250ms;
 .md-entry-field-icons {
   position: absolute;
   left: 18px;
-
 top: 50%;
+fill:var(--color-grey);
 transform: translateY(-50%);
   /*  Set transition values  */
   transition-property: fill;
@@ -364,11 +364,9 @@ transform: translateY(-50%);
   margin-bottom: 16px;
   resize: none;
   border-radius: 4px;
-
   outline: 1px solid transparent;
   outline-offset: -1px;
   transition-property: outline-color border;
-
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
